--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,20 +9,20 @@ services:
     ports:
     - 3000:3000
 
-  prometheus:
-    image: prom/prometheus:v2.28.1
-    container_name: prometheus
-    restart: unless-stopped
-    volumes:
-    - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    - prometheus-data:/prometheus
-    ports:
-    - 9090:9090
-    command:
-    - '--config.file=/etc/prometheus/prometheus.yml'
-    - '--storage.tsdb.path=/prometheus'
-    - '--storage.tsdb.retention.time=1y'
-    - '--web.enable-lifecycle'
+#  prometheus:
+#    image: prom/prometheus:v2.28.1
+#    container_name: prometheus
+#    restart: unless-stopped
+#    volumes:
+#    - ./prometheus.yml:/etc/prometheus/prometheus.yml
+#    - prometheus-data:/prometheus
+#    ports:
+#    - 9090:9090
+#    command:
+#    - '--config.file=/etc/prometheus/prometheus.yml'
+#    - '--storage.tsdb.path=/prometheus'
+#    - '--storage.tsdb.retention.time=1y'
+#    - '--web.enable-lifecycle'
 
   loki:
     image: grafana/loki:2.0.0
@@ -36,27 +36,27 @@ services:
     command: 
     - '-config.file=/mnt/config/loki-config.yml'
 
-  node_exporter:
-    image: quay.io/prometheus/node-exporter:latest
-    container_name: node_exporter
-    restart: unless-stopped
-    ports:
-    - 9100:9100
-    ###### linux
-    # command:
-    # - '--path.rootfs=/host'
-    # pid: host
-    # volumes:
-    # - '/:/host:ro,rslave'
-    ###### windows
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-    command: 
-      - '--path.procfs=/host/proc' 
-      - '--path.sysfs=/host/sys'
-      - --collector.filesystem.ignored-mount-points
-      - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
+#  node_exporter:
+#    image: quay.io/prometheus/node-exporter:latest
+#    container_name: node_exporter
+#    restart: unless-stopped
+#    ports:
+#    - 9100:9100
+#    ###### linux
+#    # command:
+#    # - '--path.rootfs=/host'
+#    # pid: host
+#    # volumes:
+#    # - '/:/host:ro,rslave'
+#    ###### windows
+#    volumes:
+#      - /proc:/host/proc:ro
+#      - /sys:/host/sys:ro
+#    command: 
+#      - '--path.procfs=/host/proc' 
+#      - '--path.sysfs=/host/sys'
+#      - --collector.filesystem.ignored-mount-points
+#      - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
         
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
@@ -70,36 +70,27 @@ services:
     - /sys:/sys:ro
     - /var/lib/docker/:/var/lib/docker:ro
     
-  app_example:
-    image: quay.io/brancz/prometheus-example-app:v0.3.0
-    container_name: app_example
-    restart: unless-stopped
-    logging:
-      driver: loki
-      options:
-        loki-url: "http://localhost:3100/loki/api/v1/push"
-    ports:
-    - 8070:8080
-  nginx:
-    image: nginx
-    container_name: nginx
-    restart: unless-stopped
-    logging:
-      driver: loki
-      options:
-        loki-url: "http://localhost:3100/loki/api/v1/push"  
-    ports:
-    - 8071:80
+#  app_example:
+#    image: quay.io/brancz/prometheus-example-app:v0.3.0
+#    container_name: app_example
+#    restart: unless-stopped
+#    logging:
+#      driver: loki
+#      options:
+#        loki-url: "http://localhost:3100/loki/api/v1/push"
+#    ports:
+#    - 8070:8080
 
-  promtail:
-    image: grafana/promtail:2.3.0
-    container_name: promtail
-    restart: unless-stopped
-    volumes:
-    - /var/log/:/var/log/:ro
-    - ./promtail.yml:/etc/promtail/promtail.yml
-    - promtail-data:/tmp
-    command: -config.file=/etc/promtail/promtail.yml
+
+#  promtail:
+#    image: grafana/promtail:2.3.0
+#    container_name: promtail
+#    restart: unless-stopped
+#    volumes:
+#    - /var/log/:/var/log/:ro
+#    - ./promtail.yml:/etc/promtail/promtail.yml
+#    - promtail-data:/tmp
+#    command: -config.file=/etc/promtail/promtail.yml
   
 
 volumes:
