--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     container_name: loki
     restart: unless-stopped
     volumes:
-    - ./loki-config.yml:/etc/loki/local-config.yml
+    - ./local-config.yml:/etc/loki/local-config.yml
     - loki-data:/loki
     ports:
     - 3100:3100
