--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,15 +81,15 @@ services:
 #    - 8070:8080
 
 
-#  promtail:
-#    image: grafana/promtail:2.3.0
-#    container_name: promtail
-#    restart: unless-stopped
-#    volumes:
-#    - /var/log/:/var/log/:ro
-#    - ./promtail.yml:/etc/promtail/promtail.yml
-#    - promtail-data:/tmp
-#    command: -config.file=/etc/promtail/promtail.yml
+  promtail:
+    image: grafana/promtail:2.3.0
+    container_name: promtail
+    restart: unless-stopped
+    volumes:
+    - /var/log/:/var/log/:ro
+    - ./promtail.yml:/etc/promtail/promtail.yml
+    - promtail-data:/tmp
+    command: -config.file=/etc/promtail/promtail.yml
   
 
 volumes:
