--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,20 +9,20 @@ services:
     ports:
     - 3000:3000
 
-#  prometheus:
-#    image: prom/prometheus:v2.28.1
-#    container_name: prometheus
-#    restart: unless-stopped
-#    volumes:
-#    - ./prometheus.yml:/etc/prometheus/prometheus.yml
-#    - prometheus-data:/prometheus
-#    ports:
-#    - 9090:9090
-#    command:
-#    - '--config.file=/etc/prometheus/prometheus.yml'
-#    - '--storage.tsdb.path=/prometheus'
-#    - '--storage.tsdb.retention.time=1y'
-#    - '--web.enable-lifecycle'
+  prometheus:
+    image: prom/prometheus:v2.28.1
+    container_name: prometheus
+    restart: unless-stopped
+    volumes:
+    - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    - prometheus-data:/prometheus
+    ports:
+    - 9090:9090
+    command:
+    - '--config.file=/etc/prometheus/prometheus.yml'
+    - '--storage.tsdb.path=/prometheus'
+    - '--storage.tsdb.retention.time=1y'
+    - '--web.enable-lifecycle'
 
   loki:
     image: grafana/loki:2.6.0
@@ -35,27 +35,20 @@ services:
     - 3100:3100
     command: -config.file=/etc/loki/local-config.yaml
 
-#  node_exporter:
-#    image: quay.io/prometheus/node-exporter:latest
-#    container_name: node_exporter
-#    restart: unless-stopped
-#    ports:
-#    - 9100:9100
-#    ###### linux
-#    # command:
-#    # - '--path.rootfs=/host'
-#    # pid: host
-#    # volumes:
-#    # - '/:/host:ro,rslave'
-#    ###### windows
-#    volumes:
-#      - /proc:/host/proc:ro
-#      - /sys:/host/sys:ro
-#    command: 
-#      - '--path.procfs=/host/proc' 
-#      - '--path.sysfs=/host/sys'
-#      - --collector.filesystem.ignored-mount-points
-#      - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
+  node_exporter:
+    image: quay.io/prometheus/node-exporter:latest
+    container_name: node_exporter
+    restart: unless-stopped
+    ports:
+    - 9100:9100
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+    command: 
+      - '--path.procfs=/host/proc' 
+      - '--path.sysfs=/host/sys'
+      - --collector.filesystem.ignored-mount-points
+      - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
         
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
