--- a/docker-compose-master.yml
+++ b/docker-compose-master.yml
@@ -9,20 +9,20 @@ services:
     ports:
     - 3000:3000
 
-  prometheus:
-    image: prom/prometheus:v2.28.1
-    container_name: prometheus
-    restart: unless-stopped
-    volumes:
-    - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    - prometheus-data:/prometheus
-    ports:
-    - 9090:9090
-    command:
-    - '--config.file=/etc/prometheus/prometheus.yml'
-    - '--storage.tsdb.path=/prometheus'
-    - '--storage.tsdb.retention.time=1y'
-    - '--web.enable-lifecycle'
+#  prometheus:
+#    image: prom/prometheus:v2.28.1
+#    container_name: prometheus
+#    restart: unless-stopped
+#    volumes:
+#    - ./prometheus.yml:/etc/prometheus/prometheus.yml
+#    - prometheus-data:/prometheus
+#    ports:
+#    - 9090:9090
+#    command:
+#    - '--config.file=/etc/prometheus/prometheus.yml'
+#    - '--storage.tsdb.path=/prometheus'
+#    - '--storage.tsdb.retention.time=1y'
+#    - '--web.enable-lifecycle'
 
   loki:
     image: grafana/loki:2.6.0
