--- a/docker-compose-url.yml
+++ b/docker-compose-url.yml
@@ -6,14 +6,14 @@ services:
     restart: unless-stopped
     volumes:
     - grafana-data:/var/lib/grafana
-    - certs:/etc/nginx/certs:ro
+    - ./certs:/etc/nginx/certs:ro
     environment:
     - VIRTUAL_HOST=${_DOMAIN}
     - LETSENCRYPT_HOST=${_DOMAIN}
     - LETSENCRYPT_EMAIL=${_EMAIL}
-    - GF_SERVER_CERT_FILE=/etc/nginx/certs/${_DOMAIN}.crt # adjust to match your domain name
-    - GF_SERVER_CERT_KEY=/etc/nginx/certs/${_DOMAIN}.key # adjust to match your domain name
-    - GF_SERVER_PROTOCOL=https
+    #- GF_SERVER_CERT_FILE=/etc/nginx/certs/${_DOMAIN}.crt # adjust to match your domain name
+    #- GF_SERVER_CERT_KEY=/etc/nginx/certs/${_DOMAIN}.key # adjust to match your domain name
+    #- GF_SERVER_PROTOCOL=https
 
     ports:
     - 3000:3000
@@ -41,7 +41,7 @@ services:
       - "443:443"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - certs:/etc/nginx/certs
+      - ./certs:/etc/nginx/certs
       - vhostd:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - ./nginx-custom.conf:/etc/nginx/conf.d/custom.conf:ro
@@ -54,7 +54,7 @@ services:
     environment:
       - NGINX_PROXY_CONTAINER=nginx-proxy
     volumes:
-      - certs:/etc/nginx/certs:rw
+      - ./certs:/etc/nginx/certs:rw
       - vhostd:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -62,6 +62,5 @@ services:
 volumes:
   grafana-data:
   loki-data:
-  certs:
   vhostd:
   html:
