--- a/ssl/docker-compose.yml
+++ b/ssl/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: unless-stopped
     volumes:
     - grafana-data:/var/lib/grafana
-    - ./certs:/etc/nginx/certs:ro
+    - certs:/etc/nginx/certs:ro
     environment:
     - VIRTUAL_HOST=${_DOMAIN}
     - LETSENCRYPT_HOST=${_DOMAIN}
@@ -26,8 +26,8 @@ services:
     - ./local-config.yml:/etc/loki/local-config.yml
     - loki-data:/loki
     environment:
-    - VIRTUAL_HOST=${_DOMAIN}
-    - LETSENCRYPT_HOST=${_DOMAIN}
+    - VIRTUAL_HOST=${_DOMAIN_LOKI}
+    - LETSENCRYPT_HOST=${_DOMAIN_LOKI}
     - LETSENCRYPT_EMAIL=${_EMAIL}
     ports:
     - 3100:3100
@@ -41,7 +41,7 @@ services:
       - "443:443"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./certs:/etc/nginx/certs
+      - certs:/etc/nginx/certs
       - vhostd:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - ./nginx-custom.conf:/etc/nginx/conf.d/custom.conf:ro
@@ -54,7 +54,7 @@ services:
     environment:
       - NGINX_PROXY_CONTAINER=nginx-proxy
     volumes:
-      - ./certs:/etc/nginx/certs:rw
+      - certs:/etc/nginx/certs:rw
       - vhostd:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -63,4 +63,5 @@ volumes:
   grafana-data:
   loki-data:
   vhostd:
+  certs:
   html:
