--- a/ssl/local-config.yml
+++ b/ssl/local-config.yml
@@ -6,33 +6,6 @@ server:
   http_server_write_timeout: 60s # allow longer time span queries
   grpc_listen_port: 9096
 
-  # Log only messages with the given severity or above. Supported values [debug,
-  # info, warn, error]
-  # CLI flag: -log.level
-  log_level: info
-
-# Configures the ingester and how the ingester will register itself to a
-# key value store.
-ingester:
-  lifecycler:
-    final_sleep: 0s
-  chunk_idle_period: 1h       # Any chunk not receiving new logs in this time will be flushed
-  max_chunk_age: 1h           # All chunks will be flushed when they hit this age, default is 1h
-  chunk_target_size: 1048576  # Loki will attempt to build chunks up to 1.5MB, flushing first if chunk_idle_period or max_chunk_age is reached first
-  chunk_retain_period: 30s    # Must be greater than index read cache TTL if using an index cache (Default index read cache TTL is 5m)
-  max_transfer_retries: 0     # Chunk transfers disabled
-
-common:
-  path_prefix: /tmp/loki
-  storage:
-    filesystem:
-      chunks_directory: /tmp/loki/chunks
-      rules_directory: /tmp/loki/rules
-  replication_factor: 1
-  ring:
-    instance_addr: 127.0.0.1
-    kvstore:
-      store: inmemory
 
 schema_config:
   configs:
@@ -60,18 +33,12 @@ storage_config:
     cache_ttl: 72h         # Can be increased for faster performance over longer query periods, uses more disk space
     shared_store: filesystem
 
-compactor:
-  working_directory: /data/loki/boltdb-shipper-compactor
-  shared_store: filesystem
-  compaction_interval: 10m
-  retention_enabled: true
-  retention_delete_delay: 2h
-  retention_delete_worker_count: 150
+
 
 limits_config:
   retention_period: 91d
   enforce_metric_name: false
-  reject_old_samples: true
+  reject_old_samples: false
   reject_old_samples_max_age: 168h
 
   # Per-user ingestion rate limit in sample size per second. Units in MB.
@@ -132,27 +99,6 @@ frontend:
   # CLI flag: -frontend.log-queries-longer-than
   log_queries_longer_than: 20s
 
-frontend_worker:
-  grpc_client_config:
-    # The maximum size in bytes the client can send.
-    # CLI flag: -<prefix>.grpc-max-send-msg-size
-    max_send_msg_size: 33554432 # 32MiB, default = 16777216]
-    max_recv_msg_size: 33554432
-
-ingester_client:
-  grpc_client_config:
-    # The maximum size in bytes the client can send.
-    # CLI flag: -<prefix>.grpc-max-send-msg-size
-    max_send_msg_size: 33554432 # 32mb, default = 16777216]
-    max_recv_msg_size: 33554432
-
-query_scheduler:
-  max_outstanding_requests_per_tenant: 2048
-  grpc_client_config:
-    # The maximum size in bytes the client can send.
-    # CLI flag: -<prefix>.grpc-max-send-msg-size
-    max_send_msg_size: 33554432 # 32mb, default = 16777216]
-    max_recv_msg_size: 33554432
 
 query_range:
   parallelise_shardable_queries: false
