--- a/ssl/local-config.yml
+++ b/ssl/local-config.yml
@@ -4,8 +4,20 @@ server:
   http_listen_port: 3100
   http_server_read_timeout: 60s # allow longer time span queries
   http_server_write_timeout: 60s # allow longer time span queries
-  grpc_listen_port: 9096
 
+ingester:
+  lifecycler:
+    address: 127.0.0.1
+    ring:
+      kvstore:
+        store: inmemory
+      replication_factor: 1
+    final_sleep: 0s
+  chunk_idle_period: 1h       # Any chunk not receiving new logs in this time will be flushed
+  max_chunk_age: 1h           # All chunks will be flushed when they hit this age, default is 1h
+  chunk_target_size: 1048576  # Loki will attempt to build chunks up to 1.5MB, flushing first if chunk_idle_period or max_chunk_age is reached first
+  chunk_retain_period: 30s    # Must be greater than index read cache TTL if using an index cache (Default index read cache TTL is 5m)
+  max_transfer_retries: 0     # Chunk transfers disabled
 
 schema_config:
   configs:
@@ -17,72 +29,37 @@ schema_config:
         prefix: index_
         period: 24h
 
-ruler:
-  alertmanager_url: http://localhost:9093
 
 storage_config:
-  boltdb:
-    directory: /data/loki/index
-
-  filesystem:
-    directory: /data/loki/chunks
-
   boltdb_shipper:
-    active_index_directory: /data/loki/boltdb-shipper-active
-    cache_location: /data/loki/boltdb-shipper-cache
+    active_index_directory: /loki/boltdb-shipper-active
+    cache_location: /loki/boltdb-shipper-cache
     cache_ttl: 72h         # Can be increased for faster performance over longer query periods, uses more disk space
     shared_store: filesystem
+  filesystem:
+    directory: /loki/chunks
+
+
+compactor:
+  working_directory: /loki/boltdb-shipper-compactor
+  shared_store: filesystem
 
 
 
 limits_config:
-  retention_period: 91d
-  enforce_metric_name: false
-  reject_old_samples: false
+  reject_old_samples: true
   reject_old_samples_max_age: 168h
 
-  # Per-user ingestion rate limit in sample size per second. Units in MB.
-  # CLI flag: -distributor.ingestion-rate-limit-mb
-  ingestion_rate_mb: 8 # <float> | default = 4]
-
-  # Per-user allowed ingestion burst size (in sample size). Units in MB.
-  # The burst size refers to the per-distributor local rate limiter even in the
-  # case of the "global" strategy, and should be set at least to the maximum logs
-  # size expected in a single push request.
-  # CLI flag: -distributor.ingestion-burst-size-mb
-  ingestion_burst_size_mb: 16 # <int> | default = 6]
-
-  # Maximum byte rate per second per stream,
-  # also expressible in human readable forms (1MB, 256KB, etc).
-  # CLI flag: -ingester.per-stream-rate-limit
-  per_stream_rate_limit: 5MB # <string|int> | default = "3MB"
-
-  # Maximum burst bytes per stream,
-  # also expressible in human readable forms (1MB, 256KB, etc).
-  # This is how far above the rate limit a stream can "burst" before the stream is limited.
-  # CLI flag: -ingester.per-stream-rate-limit-burst
-  per_stream_rate_limit_burst: 15MB # <string|int> | default = "15MB"
-
-  # The limit to length of chunk store queries. 0 to disable.
-  # CLI flag: -store.max-query-length
-  max_query_length: 2165h # <duration> | default = 721h
-
-  # Limit how far back in time series data and metadata can be queried,
-  # up until lookback duration ago.
-  # This limit is enforced in the query frontend, the querier and the ruler.
-  # If the requested time range is outside the allowed range, the request will not fail,
-  # but will be modified to only query data within the allowed time range.
-  # The default value of 0 does not set a limit.
-  # CLI flag: -querier.max-query-lookback
-  max_query_lookback: 90d
-
-# # no longer used by default. retention is done by compactor
-# table_manager:
-#   retention_deletes_enabled: true
-#   retention_period: 91d
+chunk_store_config:
+  max_look_back_period: 0s
 
 querier:
   max_concurrent: 20
+
+table_manager:
+  retention_deletes_enabled: true # true para que limite storage
+  retention_period: 2160h #3 meses
+
 
 frontend:
   # Maximum number of outstanding requests per tenant per frontend; requests
@@ -103,3 +80,15 @@ frontend:
 query_range:
   parallelise_shardable_queries: false
   split_queries_by_interval: 0 # 720h # 30d
+
+ruler:
+  storage:
+    type: local
+    local:
+      directory: /loki/rules
+  rule_path: /loki/rules-temp
+  alertmanager_url: http://localhost:9093
+  ring:
+    kvstore:
+      store: inmemory
+  enable_api: true
