--- a/ssl/local-config.yml
+++ b/ssl/local-config.yml
@@ -3,6 +3,16 @@ auth_enabled: false
 server:
   http_listen_port: 3100
 
+common:
+  path_prefix: /loki
+  storage:
+    filesystem:
+      chunks_directory: /loki/chunks
+      rules_directory: /loki/rules
+  replication_factor: 1
+  ring:
+    kvstore:
+      store: inmemory
 
 schema_config:
   configs:
@@ -14,48 +24,9 @@ schema_config:
         prefix: index_
         period: 24h
 
-
-storage_config:
-  boltdb_shipper:
-    active_index_directory: /loki/boltdb-shipper-active
-    cache_location: /loki/boltdb-shipper-cache
-    cache_ttl: 72h         # Can be increased for faster performance over longer query periods, uses more disk space
-    shared_store: filesystem
-  filesystem:
-    directory: /loki/chunks
-
-
-compactor:
-  working_directory: /loki/boltdb-shipper-compactor
-  shared_store: filesystem
-
-
-
-limits_config:
-  reject_old_samples: true
-  reject_old_samples_max_age: 168h
-
-
-querier:
-  max_concurrent: 20
-
-table_manager:
-  retention_deletes_enabled: true # true para que limite storage
-  retention_period: 2160h #3 meses
-
+ruler:
+  alertmanager_url: http://localhost:9093
 
 query_range:
   parallelise_shardable_queries: false
 
-
-ruler:
-  storage:
-    type: local
-    local:
-      directory: /loki/rules
-  rule_path: /loki/rules-temp
-  alertmanager_url: http://localhost:9093
-  ring:
-    kvstore:
-      store: inmemory
-  enable_api: true
