--- a/ssl/docker-compose.yml
+++ b/ssl/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: unless-stopped
     volumes:
     - ./grafana-data:/var/lib/grafana
-    - certs:/etc/nginx/certs:ro
+    - ./certs:/etc/nginx/certs:ro
     environment:
     - VIRTUAL_HOST=${_DOMAIN_GRAFA}
     - LETSENCRYPT_HOST=${_DOMAIN_GRAFA}
@@ -41,9 +41,9 @@ services:
       - "443:443"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - certs:/etc/nginx/certs
-      - vhostd:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
+      - ./certs:/etc/nginx/certs
+      - ./vhostd:/etc/nginx/vhost.d
+      - ./html:/usr/share/nginx/html
       - ./nginx-custom.conf:/etc/nginx/conf.d/custom.conf:ro
     labels:
       - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
@@ -54,12 +54,9 @@ services:
     environment:
       - NGINX_PROXY_CONTAINER=nginx-proxy
     volumes:
-      - certs:/etc/nginx/certs:rw
-      - vhostd:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
+      - ./certs:/etc/nginx/certs:rw
+      - ./vhostd:/etc/nginx/vhost.d
+      - ./html:/usr/share/nginx/html
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
-volumes:
-  vhostd:
-  certs:
-  html:
+
